--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit==1.40.2
-Pillow==9.5.0
-torch==2.5.1+cu118
-torchvision==0.20.1+cu118
+Pillow==11.3.0
+streamlit==1.47.1
+torch==2.7.1
+torchvision==0.22.1
